<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"

    tools:context="com.domain.vitor.estudos1.EncounterDifficultyFragment">

    <!--Informacao do grupo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/title_text_size"
            android:text="@string/group_info"
            />
        <!-- Limites de dificuldade -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dif_easy"
                android:textSize="@dimen/small_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2500"
                android:textSize="@dimen/small_text_size"
                android:id="@+id/easy_number"
                android:layout_marginRight="@dimen/text_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dif_med"
                android:textSize="@dimen/small_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2500"
                android:textSize="@dimen/small_text_size"
                android:id="@+id/medium_number"
                android:layout_marginRight="@dimen/text_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dif_hard"
                android:textSize="@dimen/small_text_size"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2500"
                android:textSize="@dimen/small_text_size"
                android:id="@+id/hard_number"
                android:layout_marginRight="@dimen/text_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dif_deadly"
                android:textSize="@dimen/small_text_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2500"
                android:textSize="@dimen/small_text_size"
                android:id="@+id/deadly_number"
                android:layout_marginRight="@dimen/text_margin"/>






        </LinearLayout>

        <!-- Dropdowns dos Players -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/player_dropdowns_container">


                <include layout="@layout/encounter_info_dropdowns" />


            </LinearLayout>
        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Level"
            android:id="@+id/add_level_button"/>





    </LinearLayout>

    <!--Informacao dos inimigos-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/title_text_size"
            android:text="@string/enemy_info"
            />


        <!-- Dropdowns dos Inimigos -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/enemy_dropdowns_container">


                <include layout="@layout/encounter_info_dropdowns" />


            </LinearLayout>
        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add CR"
            android:id="@+id/add_cr_button"/>

        </LinearLayout>

    <!--Informacao do encontro-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encounter_info"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xp"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9999"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                android:id="@+id/xp_value_text"
                android:layout_marginLeft="@dimen/text_margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xpa"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9999"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                android:id="@+id/xpa_value_text"
                android:layout_marginLeft="@dimen/text_margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                android:id="@+id/dif_text"
                android:layout_marginLeft="@dimen/text_margin"/>

        </LinearLayout>




    </LinearLayout>


</LinearLayout>
